[package]
name = "tax"
version = "0.0.4"
authors = ["Jerome Schneider <mail@jeromeschneider.f>"]
edition = "2018"
license = "MIT"
description = "tax is a cli task list manager"
homepage = "https://github.com/netgusto/tax"
repository = "https://github.com/netgusto/tax"
readme = "README.md"
keywords = ["task", "markdown", "orgmode", "cli", "todo"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
dirs = "3.0.1"
which = "4.0.1"
colored = "2"
clap = "2.33.1"